# SpecMCP

./: .gitignore  DESIGN.md  LICENSE  README.md  SKILL.md  presentation.html  pyproject.toml
.github/workflows/: ci.yml
commands/: specc.md
plans/: PR1.md  PR2.md  PR3.md  PR4.md  PR5.md
src/specdd_mcp/: __init__.py  __main__.py  cli.py  paths.py  types.py
src/specdd_mcp/operations/: __init__.py  add_task.py  bootstrap.py  conflicts.py  create_spec.py  dependencies.py  globs.py  hashing.py  locks.py  merge.py  mutate_tasks.py  ownership.py  scope.py  specs.py  tasks.py  walks.py  write_scope.py
src/specdd_mcp/operations/validation/: __init__.py  cross_spec.py  single_file.py  types.py
src/specdd_mcp/parser/: __init__.py  bullets.py  levels.py  lexer.py  parse_spec.py  resolve_chain.py  scenarios.py  sections.py  structure.py  tasks.py  text.py
src/specdd_mcp/server/: __init__.py  app.py  logging.py  tools.py
src/specdd_mcp/templates/: __init__.py
tests/: conftest.py  test_add_task.py  test_benchmark.py  test_bootstrap_op.py  test_bullets.py  test_chain_fixtures.py  test_cli.py  test_conflict_fixtures.py  test_conflicts.py  test_create_spec.py  test_dependencies.py  test_edge_cases.py  test_fixtures.py  test_full_pipeline.py  test_globs.py  test_hashing.py  test_large_repo.py  test_levels.py  test_lexer.py  test_locks.py  test_merge.py  test_mutate_ambiguous_candidates.py  test_mutate_concurrency.py  test_mutate_io.py  test_mutate_orchestrator.py  test_mutate_preservation.py  test_mutate_replace.py  test_mutate_resolver.py  test_ownership.py  test_parse_spec.py  test_paths.py  test_performance.py  test_resolve_chain.py  test_scenarios.py  test_scope.py  test_sections.py  test_server.py  test_server_app.py  test_server_logging.py  test_server_tools.py  (+13 more)
tests/e2e/: README.md
tests/fixtures/chains/simple_3_level/: app.sdd
tests/fixtures/chains_with_conflicts/must_vs_must_not/: app.sdd
tests/fixtures/specs/: deep_indentation.sdd  full_service.sdd  minimal.sdd  multibyte_content.sdd  multiple_scenarios.sdd  readme_calculator.sdd  tasks_all_states.sdd  unknown_sections.sdd
(+31 files in other folders)
